# GodWorldWar

./: .replit  admin.py  alliance.py  combat.py  config.py  convoy.py  countries.py  database.py  debug_user.py  debug_weapons.py  dragonrp.db  economy.py  fix_user_production.py  game_logic.py  keyboards.py  main.py  marketplace.py  news.py  pyproject.toml  replit.md  run_tests.py  stop_bot.py  strategy_guide.md  test_bot.py  test_distance_system.py  test_production.py  test_your_weapons.py
attached_assets/: Pasted--8-25-2025-2-42-AM-1000--1756201292248_1756201292248.txt  Pasted--Buildings-80-000-1000-6-100-000-1756123665228_1756123665228.txt  Pasted--Buildings-80-000-1000-6-100-000-1756130636152_1756130636153.txt  Pasted--workspace-python-test-bot-py-2025-08-25-12-12-30-050-main-INFO-Starting-comprehensi-1756123958965_1756123958965.txt  Pasted--workspace-python-test-bot-py-2025-08-25-12-15-28-956-main-INFO-Starting-comprehensi-1756124148229_1756124148229.txt
mysql_data/: #ib_16384_0.dblwr  auto.cnf  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
mysql_data/#innodb_redo/: #ib_redo32_tmp  #ib_redo33_tmp  #ib_redo34_tmp  #ib_redo35_tmp  #ib_redo36_tmp  #ib_redo5
mysql_data/mysql/: general_log_213.sdi  slow_log_214.sdi
mysql_data/performance_schema/: accounts_145.sdi  binary_log_trans_189.sdi  cond_instances_82.sdi  (+107 more)
weapons/: __init__.py  advanced_jets.py  basic_weapons.py  bombs.py  defense_weapons.py  missiles.py  naval_weapons.py  special_missiles.py  transport_equipment.py
(+2 files in other folders)
