[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "mysql-connector-python>=9.4.0",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot==20.7",
    "telegram>=0.0.1",
]
